
- 30/05/2017

	- changed masses from base 20 to 10 medieval, 20 industrial, 30 spacer
	- added patch folder + file that removes the old override process, should improve compatibility

- 29/12/2017

	- update to b18
	- updated about file, since patchoperations do change thing with overwriting+mod compatiblity
	- fixed roots <Defs>
	- added research tab
	- added bedrolls to patch list
	- fixed some casesensitve xml tags
	- added adv comp to spacer stuff (all slightly more expensive now)
			- removed components 5 and replaced 2 adv (rate is 4comp about 1adv)
			- 1 adv added to instruments, had no component cost

- 06/01/2018

	- added patchoperationfind mod
	- added the patches now in the main mod (makes additional patchmods obsolete
	- so far supports: [t]morebeds(both versions), goodnight, cts, rimkea
	- updated about file with note for compatibiltiy

- 07/01/2018

	- added support for mod fast regen b18
	- in vanilla patch replaced li[1] with the compclass variant

- 15/01/2018

	- added modsync

- 23/01/2018

	- added neutech to modcompatibility
	- added linkable for vanilla animal sleeping box and animal bed
	- added version number in about file

- 04/04/2018

	- added medieval times to patches, modcomp

- 08/04/2018

	Ver.: b18-1.0.6
	- added compatibility with zipangu pack mod, added vitals monitor to some beds, where it was missing
	- updated version in about file, not that i would forget XD

- 09/04/2018

	Ver.: b18-1.0.7
	- updated modsync file
	- added mending beds comp

- 23/10/2018

	- update for Rimworld 1.0
	- xml updates for 1.0
	- thingcategories buildingsmisc added for minification purposes
	- replaced components just with new versions
	- added construction skillrequirements (levels: 4,8,12 for medieval,industrial,spacer)
	- removed old modsync file for now
	- changed multi textures to new endings (noth,south,east)

- 25/10/2018

	- fixed fastregen mod name so medicaddons now link