@@ -27,5 +27,12 @@
 	
 	If you need compatibility with another mod let me know or there is a short tutorial for that in the forum topic of the mod.
 	
-	Download links for Dropbox (current or older versions) or Steamworkshop link for current Rimworld version can be found in the ludeon forum thread linked above.</description>
+	Download links for Dropbox (current or older versions) or Steamworkshop link for current Rimworld version can be found in the ludeon forum thread linked above.
+	
+	additional languages:
+	- japanese by Proxyer
+	- spanish by CANALETA
+	- spanish latin by CANALETA
+	- german by sulusdacor
+	</description>
 </ModMetaData>
