@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LanguageData>
+  <sd_medicaddons_research_medieval_med.label>mittelalterliche Krankenpflege</sd_medicaddons_research_medieval_med.label>
+  <sd_medicaddons_research_medieval_med.description>Neue Möglichkeiten einen Krankenbereich zu gestalten.</sd_medicaddons_research_medieval_med.description>
+  <sd_medicaddons_research_industrial_med.label>industrielle Krankenpflege</sd_medicaddons_research_industrial_med.label>
+  <sd_medicaddons_research_industrial_med.description>Die Ausstattung des Krankenflügels deiner Kolonie mit diesen Geräten wird die Überlebenschancen der Kolonisten erhöhen. Dies beinhaltet neue Möglichkeiten den Krankenbereich in zivilisierter Weise zu gestalten.</sd_medicaddons_research_industrial_med.description>
+  <sd_medicaddons_research_space_med.label>weltraum Krankenpflege</sd_medicaddons_research_space_med.label>
+  <sd_medicaddons_research_space_med.description>Die letzte Errungenschaft der Forschung sollte sich in allen Bereichen deiner Kolonie zeigen. Der Krankenbereich wird wie das innere eines Raumschiffes aussehen.</sd_medicaddons_research_space_med.description>
+</LanguageData>
